Fix dropshadow and blur graphics effects.

The effects are making assumptions about implementation details of the
paint engine, which had changed between Qt 4 and Qt 5. The engines no
longer implement the pixmap filters and so the assumption made here
was wrong and should be removed.

Task-number: QTBUG-29945
Change-Id: I146d8c8cc12842a323bd613288003afcf89a47c7
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>